push to kafka stage completed